--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
 <a href="#" 
-class="list-group-item clearfix">
+class="list-group-item clearfix"
+(click) = "showRecipeDetails()">
   <div class="pull-eft">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
