--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,8 @@
 
     <div class="col-xs-12">
         <app-recipe-item 
-        *ngFor="let recipe of recipes"
-        [recipe] = "recipe"></app-recipe-item>
+        *ngFor="let recipeEl of recipes"
+        [recipe] = "recipeEl"
+        (recipeEmitter) = "onRecipeSelected(recipeEl)"></app-recipe-item>
     </div>
 </div>
