--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list 
+    (recipeEmitToRecipes) = "selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-details></app-recipe-details>
+    <app-recipe-details
+    *ngIf= "selectedRecipe; else InfoText"
+    [recipe] = "selectedRecipe">
+    </app-recipe-details>
+    <ng-template #InfoText> 
+      <p>Please Select a recipe to see the details!</p>
+    </ng-template>
   </div>
 </div>
