Works well with navigation and add button of shopping list

--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="{{recipe.imagePath}}" 
+    <img src="{{recipeInDetails.imagePath}}" 
     alt="" 
     class="img-responsive"
     style="height: 300px;">
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{recipeInDetails.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -29,7 +29,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    {{recipe.description}}
+    {{recipeInDetails.description}}
   </div>
 </div>
 <div class="row">
