--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -6,7 +6,7 @@
   <div class="col-md-7">
     <app-recipe-details
     *ngIf= "selectedRecipe; else InfoText"
-    [recipe] = "selectedRecipe">
+    [recipeInDetails] = "selectedRecipe">
     </app-recipe-details>
     <ng-template #InfoText> 
       <p>Please Select a recipe to see the details!</p>
